--- a/tmux.conf
+++ b/tmux.conf
@@ -25,7 +25,7 @@ bind-key e send-keys "eval $(tmux show-environment -s)" Enter
 
 #set -g status-utf8 on
 #set -g status-keys vi
-#set -g status-interval 1
+set -g status-interval 1
 set -g status-attr bright
 set -g status-fg white
 set -g status-bg black
@@ -35,3 +35,5 @@ set -g status-justify centre
 set -g status-right '#[fg=green][ %m/%d %H:%M:%S ]#[default]'
 #setw -g window-status-current-format '#[fg=yellow](#I.#P#F#W)#[default]'
 #setw -g window-status-format '#I#F#W'
+
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
